@@ -58,5 +58,3 @@
 
  - Thunderbird auto-config
 	- https://www.virtualmin.com/node/24238
-
- - Option to disable clearing of incremental for a backup
