@@ -246,8 +246,9 @@ if (&has_incremental_tar() && &has_incremental_format()) {
 	print &ui_table_row(
 		&hlink($text{'backup_increment'}, "backup_increment"),
 			    &ui_radio("increment", int($sched->{'increment'}),
-				      [ [ 0, $text{'backup_increment0'} ],
-					[ 1, $text{'backup_increment1'} ] ]));
+				      [ [ 0, $text{'backup_increment0'} ]."<br>",
+					[ 1, $text{'backup_increment1'} ]."<br>",
+					[ 2, $text{'backup_increment2'} ] ]));
 	}
 
 # Before and after commands (fixed)
