@@ -2076,6 +2076,7 @@ backup_errors1=Continue with other features and servers
 backup_increment=Backup level
 backup_increment0=Full (all files)
 backup_increment1=Incremental (only files changed since last full backup)
+backup_increment2=Neither (all files, and don't update incremental state)
 backup_email=Email backup report to
 backup_email_err=Only send email on failure
 backup_email_doms=Also send email to owners of backed-up servers
@@ -5619,6 +5620,7 @@ viewbackup_size=Final backup size
 viewbackup_output=Full backup output
 viewbackup_time=Run time
 viewbackup_inc=Backup type
+viewbackup_inc2=Full without resettting incremental
 viewbackup_inc1=Incremental
 viewbackup_inc0=Full
 viewbackup_ok=Final status
