@@ -1376,3 +1376,4 @@ All existing virtual servers using the FollowSymLinks option will be converted t
 Updated the MediaWiki script installer to versions 1.20.1 and 1.19.3, bbPress to 1.2, and ZenPhoto to 1.4.3.5.
 If running Virtualmin in SSL mode with a certificate of less than 2048 bits, a warning is now displayed on the system information page prompting the admin to generate or request a new cert.
 Virtualmin will now prompt the root user after logging in if any virtual servers with unsafe symlink or mod_php settings are found. Previous versions applied fixes for these security issues automatically, which broke some domains.
+Backups can now be prevented from updating the incremental state, so that ad-hoc backups can be run without interfering with scheduled incremental backups.
